--- a/styles.css
+++ b/styles.css
@@ -133,8 +133,18 @@ body {
     width: 100%;
     height: 100%;
     z-index: -1;
-    pointer-events: auto; /* Allow interacting with the canvas */
-    will-change: transform; /* Force hardware acceleration */
-    transform: translateZ(0); /* Force GPU rendering */
-    backface-visibility: hidden; /* Helps with rendering on mobile devices */
+}
+
+.member-table tbody{
+    border: 1.5px solid gray;
+}
+
+.arrow-bar {
+    width: 100%;
+    height: 50px;
+}
+
+.member-background {
+    background-color:#262626;
+    border-radius: 10px;
 }
