--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html {
     scroll-behavior: smooth;
 }
 
-::-moz-selection { /* Code for Firefox */
+::-moz-selection {
   color: #1a1a1a;
   background: #d0d6d6;
 }
@@ -19,7 +19,7 @@ html {
   background: #d0d6d6;
 }
 
-p, table {
+p, table, span {
     font-size: 16px;
     font-family: "Roboto", 'Courier-new', monospace;
     font-weight: 300;
@@ -126,25 +126,45 @@ body {
     margin: 0 auto;
 }
 
-.background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
 .member-table tbody{
-    border: 1.5px solid gray;
+    border: 2px solid rgb(44, 44, 44);
+    overflow: scroll;
 }
 
 .arrow-bar {
     width: 100%;
-    height: 50px;
+    height: 30px;
 }
 
 .member-background {
     background-color:#262626;
     border-radius: 10px;
+    padding: 0.5px 10px;
+}
+
+.arrow {
+    height: 30px;
+    width: 50px;
+    margin: -8px 100px;
+    background-color: #1b1b1b;
+    cursor: pointer;
+    color: white;
+    transition: background-color 0.3s ease;
+    border: 0;
+}
+.arrow:hover {
+    background-color: #2c2c2c;
+}
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
+.page-number {
+    margin: 0 0px 0px 120px;
+    padding: 0;
 }
