--- a/styles.css
+++ b/styles.css
@@ -124,47 +124,52 @@ body {
     scrollbar-color: #d0d6d6 transparent;
     justify-content: center;
     margin: 0 auto;
+    width: 100%;
 }
 
 .member-table tbody{
     border: 2px solid rgb(44, 44, 44);
-    overflow: scroll;
+    overflow: hidden;
+    transition: height 0.3s ease, opacity 0.3s ease;
+    opacity: 0;
 }
 
 .arrow-bar {
     width: 100%;
     height: 30px;
+    padding-bottom: 40px;
 }
 
 .member-background {
     background-color:#262626;
     border-radius: 10px;
-    padding: 0.5px 10px;
+    padding: 0px 10px;
+    width: 100%;
 }
 
 .arrow {
     height: 30px;
     width: 50px;
-    margin: -8px 100px;
     background-color: #1b1b1b;
     cursor: pointer;
     color: white;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, opacity 0.3s ease;
     border: 0;
+    opacity: 0;
+    border-radius: 5px;
 }
 .arrow:hover {
     background-color: #2c2c2c;
 }
 
-.right {
-    float: right;
+#right {
+    margin: 0 0 0 25%;
 }
 
-.left {
-    float: left;
+#left {
+    margin: 0 20%;
 }
 
 .page-number {
-    margin: 0 0px 0px 120px;
-    padding: 0;
+    margin: 0 auto;
 }
