--- a/styles.css
+++ b/styles.css
@@ -130,8 +130,16 @@ body {
 .member-table tbody{
     border: 2px solid rgb(44, 44, 44);
     overflow: hidden;
-    transition: height 0.3s ease, opacity 0.3s ease;
+    transition: height 0.2s ease, opacity 0.2s ease;
+}
+
+.member-table {
+    transition: opacity 0.2s ease;
     opacity: 0;
+}
+
+.member-background {
+    width: 100%;
 }
 
 .arrow-bar {
