--- a/styles.css
+++ b/styles.css
@@ -136,9 +136,14 @@ body {
 .member-table {
     transition: opacity 0.2s ease;
     opacity: 0;
+    width: 95%;
+    margin: 0 auto;
 }
 
 .member-background {
+    background-color:#262626;
+    border-radius: 10px;
+    padding: 0px;
     width: 100%;
 }
 
@@ -146,13 +151,6 @@ body {
     width: 100%;
     height: 30px;
     padding-bottom: 40px;
-}
-
-.member-background {
-    background-color:#262626;
-    border-radius: 10px;
-    padding: 0px 10px;
-    width: 100%;
 }
 
 .arrow {
@@ -180,4 +178,16 @@ body {
 
 .page-number {
     margin: 0 auto;
+}
+.searchBar {
+    width: 100%;
+    height: 40px;
+    margin: 0;
+    padding: 0;
+    border: 2px solid #353535;
+    border-radius: 10px 10px 0px 0px;
+    font-size: large;
+    color: #d0d6d6;
+    background-color: #262626;
+    
 }
