--- a/styles.css
+++ b/styles.css
@@ -181,6 +181,7 @@ body {
     width: 100%;
     height: 30px;
     padding-bottom: 40px;
+    padding-top: 10px;
 }
 
 .arrow {
@@ -194,6 +195,7 @@ body {
     opacity: 0;
     border-radius: 5px;
 }
+
 .arrow:hover {
     background-color: var(--hover-bg-color);
 }
