--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,7 @@ body {
     border-radius: 10px;
     padding: 0px;
     width: 100%;
+    overflow-x: auto;
 }
 
 .arrow-bar {
@@ -227,10 +228,13 @@ body {
     text-align: center;
 }
 
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .theme-toggle {
-    position: relative;
-    top: -65px;
-    left: 330px;
     background-color: transparent;
     border: none;
     cursor: pointer;
